Static Website Button Overlay, Ico and redesign

--- a/templates/base.html
+++ b/templates/base.html
@@ -3,8 +3,8 @@
 <html>
 <head>
   <meta charset='utf-8'>
-  <title>Tweet Generator</title>
-  <link rel="shortcut icon" href="static/twitter.ico"/>
+  <title>Messaging</title>
+  <link rel="shortcut icon" href="static/jumpICO.ico"/>
 
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="../static/styles/custom.css"/>
@@ -16,7 +16,6 @@
 </body>
 <footer class="page-footer font-small blue">
     <div class="text-center fixed-bottom">
-        <a href="https://twitter.com/Scarlet_Markovv">Twitter Page</a>
     </div>
 </footer>
 </html>
