--- a/templates/home.html
+++ b/templates/home.html
@@ -10,8 +10,7 @@
                 <h2></h2>
                 <a href="/" class="btn btn-secondary btn-lg active" role="button" aria-pressed="true">{{ click }}</a>
                 <div class="" style= "padding-top: 2%">
-                <form action="/tweet" method="post">
-                    <input type="hidden" name="sentence" value="{{ tweet }}">
+                <form action="/" method="post">
                 </form>
                 </div>
             </div>
